--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ionicTaMere",
+  "name": "ionic-project-games",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -15,12 +15,24 @@
   "dependencies": {
     "@angular/common": "~12.1.1",
     "@angular/core": "~12.1.1",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~12.1.1",
     "@angular/platform-browser": "~12.1.1",
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
+    "@capacitor/app": "1.0.7",
+    "@capacitor/camera": "^1.2.2",
+    "@capacitor/core": "3.3.3",
+    "@capacitor/filesystem": "^1.0.6",
+    "@capacitor/haptics": "1.1.3",
+    "@capacitor/keyboard": "1.2.0",
+    "@capacitor/status-bar": "1.0.6",
+    "@capacitor/storage": "^1.2.3",
     "@ionic/angular": "^5.5.2",
-    "rxjs": "~6.6.0",
+    "@ionic/pwa-elements": "^3.1.1",
+    "firebase": "^8.6.7",
+    "ng2-search-filter": "^0.5.1",
+    "rxjs": "^6.6.7",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
@@ -34,6 +46,7 @@
     "@angular/compiler": "~12.1.1",
     "@angular/compiler-cli": "~12.1.1",
     "@angular/language-service": "~12.0.1",
+    "@capacitor/cli": "3.3.3",
     "@ionic/angular-toolkit": "^4.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
